# pulse-switcher-rs

./: Cargo.toml  config.example.toml
src/: main.rs
