[package]
name = "pulse-switcher"
version = "0.1.1"
authors = ["Allen Wild <allenwild93@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
dirs-next = "2"
pulsectl = { git = "https://github.com/aswild/pulsectl" }
regex = "1.5"
serde = { version = "1", features = ["derive"] }
structopt = "0.3"
toml = "0.5"
yall = "0.5"
