[package]
name = "pulse-switcher"
version = "0.1.2"
authors = ["Allen Wild <allenwild93@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
clap = { version = "3.2", features = ["cargo", "deprecated", "derive"] }
dirs-next = "2"
pulsectl = { git = "https://github.com/aswild/pulsectl" }
regex = "1.6"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
yall = "0.5"
